apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_ascii.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&priced_now(), RenderOptions::ascii(false))"
---
costroid ~$42.18  [###+] 97% !!
