apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_braille.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&priced_now(), RenderOptions::braille(false))"
---
C⠉ ~$42.18  ⣿⣿⣿⡇ 97% !!
