apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_braille_with_ansi.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&priced_now(), RenderOptions::braille(true))"
---
[1;38;5;154mC⠉[0m ~$42.18  [31;1m⣿⣿⣿⡇[0m 97% !!
