apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&priced_now(), RenderOptions::plain())"
---
costroid ~$42.18, cursor wk partial, 97%, limit data incomplete
