apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_plain_empty_api.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&subscription_only_now(), RenderOptions::plain())"
---
costroid ~$0.00, no API usage, cursor wk partial, 97% (critical), limit data incomplete
