apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_unverified_braille.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&all_arms_now(), RenderOptions::braille(true))"
---
[1;38;5;154mC⠉[0m ~$42.18  [38;5;245m⣿⣿⣿⡇[0m 96% ? unverified 2d2h
