apps/cli/src/snapshots/costroid__render__tests__snapshot_statusline_unverified_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_statusline(&all_arms_now(), RenderOptions::plain())"
---
costroid ~$42.18, claude code wk 96% used ? unverified, resets in 2d2h
